--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^0.13.2
+  material_floating_search_bar: ^0.3.6
 
 
   # The following adds the Cupertino Icons font to your application.
